<resources>
    <string name="app_name">UserManager</string>


    <string name="user_list_action_bar_title">User list</string>
    <string name="profile_bio_title">Bio</string>
    <string name="profile_bio_content">User bio here</string>

    <string name="profile_followers_title">Followers</string>
    <string name="profile_followings_title">Followings</string>
    <string name="profile_repos_title">Repos</string>

    <string name="error_dialog_title">Error</string>
    <string name="profile_title">Profile</string>
</resources>