<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imvBackground"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/bg1"
                app:layout_constraintBottom_toTopOf="@id/guidelineBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineAvatar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.55" />


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imvAvatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/white"
                android:elevation="1dp"
                android:padding="5dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@id/guidelineAvatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:shapeAppearanceOverlay="@style/circle"
                app:strokeColor="@color/white"
                app:strokeWidth="5dp" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:background="@drawable/bg_shadow_top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.xuanlocle.usermanager.widget.TextViewEx
                    style="@style/TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/profile_title"
                    android:textColor="@color/white"
                    app:fontSize="title" />

                <ImageView
                    android:id="@+id/imvBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/margin_small"
                    android:padding="@dimen/margin_tiny"
                    android:src="@drawable/ic_arrow_left_white" />
            </RelativeLayout>

            <com.xuanlocle.usermanager.widget.TextViewEx
                android:id="@+id/tvProfileName"
                style="@style/TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                app:fontSize="title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/guidelineAvatar"
                tools:text="Luis Martin" />

            <com.xuanlocle.usermanager.widget.TextViewEx
                android:id="@+id/tvProfileLocation"
                style="@style/TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                app:fontSize="small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvProfileName"
                tools:text="Location" />

            <View
                android:id="@+id/vDivider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_normal"
                android:background="@color/grey_dd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvProfileLocation" />

            <LinearLayout
                android:id="@+id/vFollowers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:orientation="horizontal"
                android:weightSum="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vDivider">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.xuanlocle.usermanager.widget.TextViewEx
                        android:id="@+id/tvFollowerCount"
                        style="@style/TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="0"
                        app:fontSize="title"
                        app:fontType="bold"
                        tools:text="123" />

                    <com.xuanlocle.usermanager.widget.TextViewEx
                        style="@style/TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/profile_followers_title" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.xuanlocle.usermanager.widget.TextViewEx
                        android:id="@+id/tvFollowingCount"
                        style="@style/TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="0"
                        app:fontSize="title"
                        app:fontType="bold"
                        tools:text="123" />

                    <com.xuanlocle.usermanager.widget.TextViewEx
                        style="@style/TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/profile_followings_title" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.xuanlocle.usermanager.widget.TextViewEx
                        android:id="@+id/tvReposCount"
                        style="@style/TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="0"
                        app:fontSize="title"
                        app:fontType="bold"
                        tools:text="123" />

                    <com.xuanlocle.usermanager.widget.TextViewEx
                        style="@style/TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/profile_repos_title" />

                </LinearLayout>
            </LinearLayout>


            <View
                android:id="@+id/vDivider2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_normal"
                android:background="@color/grey_dd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vFollowers" />

            <com.xuanlocle.usermanager.widget.TextViewEx
                android:id="@+id/tvBio"
                style="@style/TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/profile_bio_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vDivider2" />

            <com.xuanlocle.usermanager.widget.TextViewEx
                android:id="@+id/tvBioContent"
                style="@style/TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_tiny"
                android:text="@string/profile_bio_content"
                android:textColor="@color/grey_97"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvBio" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

